--- a/src/IndicateursBundle/Resources/config/services.yml
+++ b/src/IndicateursBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    indicateurs.example:
-#        class: IndicateursBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    indicateurs.importjtrac:
+        class: IndicateursBundle\Model\ImportJtrac
+        arguments: [%list_project%]
