--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "beberlei/DoctrineExtensions": "1.0.*"
+        "beberlei/DoctrineExtensions": "1.0.*",
+        "ob/highcharts-bundle": "1.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
