--- a/src/IndicateursBundle/Resources/config/routing.yml
+++ b/src/IndicateursBundle/Resources/config/routing.yml
@@ -24,8 +24,15 @@ indicateurs_reouverture_homepage:
     path:   /reopen
     defaults: { _controller: IndicateursBundle:Reouverture:index }
 
+indicateurs_reouverture_table:
+    path:   /reopen/table/{year}/{project}
+    defaults: { _controller: IndicateursBundle:Reouverture:Table,project: -1 }
+    requirements:
+        method:  GET
+        year:  \d+
+
 indicateurs_reouverture_graph:
-    path:   /reopen/graph/{year}
+    path:   /reopen/graph/{year}/{project}
     defaults: { _controller: IndicateursBundle:Reouverture:Graph,project: -1 }
     requirements:
         method:  GET
