--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,114 +17,116 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
-    list_project:
-        60:
-            name: HIPARK
-            type:
-                1: bug
-                2: evolution mineur
-                3: support
-                5: evolution majeur
-                6: devis
-        93:
-            name: iREIM
-            type:
-                1: bug
-                3: evolution mineur
-                4: support
-                5: evolution majeur
-                6: devis
-        123:
-            name: REIMIT
-            type:
-                1: bug
-                3: evolution mineur
-                4: support
-                5: evolution majeur
-                6: devis
-        114:
-            name: Studelites
-            type:
-                1: bug
-                2: evolution mineur
-                3: support
-                4: arbitrage deprecated
-                5: evolution majeur
-                6: devis
-        91:
-            name: CFO
-            type:
-                1: bug
-                2: evolution mineur
-                3: support
-                4: evolution majeur
-                5: Devis
-        55:
-            name: Logement
-            type:
-                1: bug
-                2: evolution mineur
-                3: support
-                4: contribution-Depreciated
-                5: evolution majeur
-                6: devis
-        58:
-            name: Webzine
-            type:
-                1: bug
-                2: evolution mineur
-                3: support
-                4: evolution majeur
-                5: devis
-    list_trsb_user:
-        601: Stephane Richard
-        618: Fabienne Guriec
-        705: Batiste Herisson
-        707: Matthieu Rambaud
-        745: Jonathan Gondellier
-    status:
-        corrected:
-            60: 7
-            93: 4
-            123: 4
-            114: 5
-            91: 5
-            55: 10
-            58: 7
-        validated:
-            91: 6
-            60: 6
-            123: 14
-            55: 6
-            114: 6
-            58: 6
-            93 : 14
-        refused:
-            91: 7
-            60: 8
-            123: 6
-            55: 7
-            114: 7
-            58: 8
-            93: 6
-        closed:
-            60: 99
-            93: 99
-            123: 99
-            114: 99
-            91: 99
-            55: 99
-            58: 99
-    delai_priorite:
-        support:
-            1: 4
-            2: 24
-            3: 72
-        anomalie:
-            1: 4
-            2: 24
-            3: 72
-        evolution:
-            1: 48
-            2: 120
-            3: 240
+    contrat:
+            nbsupano: 415
+            delai_priorite:
+                support:
+                    1: 4
+                    2: 24
+                    3: 72
+                anomalie:
+                    1: 4
+                    2: 24
+                    3: 72
+                evolution:
+                    1: 48
+                    2: 120
+                    3: 240
+        list_project:
+            60:
+                name: HIPARK
+                type:
+                    1: bug
+                    2: 'evolution mineur'
+                    3: support
+                    5: 'evolution majeur'
+                    6: devis
+            93:
+                name: iREIM
+                type:
+                    1: bug
+                    3: 'evolution mineur'
+                    4: support
+                    5: 'evolution majeur'
+                    6: devis
+            123:
+                name: REIMIT
+                type:
+                    1: bug
+                    3: 'evolution mineur'
+                    4: support
+                    5: 'evolution majeur'
+                    6: devis
+            114:
+                name: Studelites
+                type:
+                    1: bug
+                    2: 'evolution mineur'
+                    3: support
+                    4: 'arbitrage deprecated'
+                    5: 'evolution majeur'
+                    6: devis
+            94:
+                name: CFO
+                type:
+                    1: bug
+                    2: 'evolution mineur'
+                    3: support
+                    4: 'evolution majeur'
+                    5: Devis
+            55:
+                name: Logement
+                type:
+                    1: bug
+                    2: 'evolution mineur'
+                    3: support
+                    4: contribution-Depreciated
+                    5: 'evolution majeur'
+                    6: devis
+            58:
+                name: Webzine
+                type:
+                    1: bug
+                    2: 'evolution mineur'
+                    3: support
+                    4: 'evolution majeur'
+                    5: devis
+        list_trsb_user:
+            601: 'Stephane Richard'
+            618: 'Fabienne Guriec'
+            705: 'Batiste Herisson'
+            707: 'Matthieu Rambaud'
+            745: 'Jonathan Gondellier'
+        status:
+            corrected:
+                60: 7
+                93: 4
+                123: 4
+                114: 5
+                94: 5
+                55: 10
+                58: 7
+            validated:
+                94: 6
+                60: 6
+                123: 14
+                55: 6
+                114: 6
+                58: 6
+                93: 14
+            refused:
+                94: 7
+                60: 8
+                123: 6
+                55: 7
+                114: 7
+                58: 8
+                93: 6
+            closed:
+                60: 99
+                93: 99
+                123: 99
+                114: 99
+                94: 99
+                55: 99
+                58: 99
