--- a/src/IndicateursBundle/Resources/config/routing.yml
+++ b/src/IndicateursBundle/Resources/config/routing.yml
@@ -37,3 +37,28 @@ indicateurs_reouverture_graph:
     requirements:
         method:  GET
         year:  \d+
+
+indicateurs_supanoforfait_count:
+      path:   /supanoforfait/count/{year}
+      defaults: { _controller: IndicateursBundle:SupAnoForfait:getCountSupAnoForfait}
+      requirements:
+          method:  GET
+          year:  \d+
+
+indicateurs_contrat_reouverture_incident_homepage:
+      path:   /contrat
+      defaults: { _controller: IndicateursBundle:Contractuel:index }
+
+indicateurs_contrat_reouverture_incident_count:
+      path:   /contrat/reoinci/count/{year}/{month}/{project}
+      defaults: { _controller: IndicateursBundle:Contractuel:IncidentReouvertureCount,project: -1,month: -1 }
+      requirements:
+          method:  GET
+          year:  \d+
+
+indicateurs_contrat_reouverture_incident_table:
+      path:   /contrat/reoinci/table/{year}/{month}/{project}
+      defaults: { _controller: IndicateursBundle:Contractuel:IncidentReouverture,project: -1,month: -1 }
+      requirements:
+          method:  GET
+          year:  \d+
