--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,115 +18,150 @@ parameters:
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
     contrat:
-            nbsupano: 415
-            delai_priorite:
-                support:
-                    1: 4
-                    2: 24
-                    3: 72
-                anomalie:
-                    1: 4
-                    2: 24
-                    3: 72
-                evolution:
-                    1: 48
-                    2: 120
-                    3: 240
-        list_project:
-            60:
-                name: HIPARK
-                type:
-                    1: bug
-                    2: 'evolution mineur'
-                    3: support
-                    5: 'evolution majeur'
-                    6: devis
-            93:
-                name: iREIM
-                type:
-                    1: bug
-                    3: 'evolution mineur'
-                    4: support
-                    5: 'evolution majeur'
-                    6: devis
-            123:
-                name: REIMIT
-                type:
-                    1: bug
-                    3: 'evolution mineur'
-                    4: support
-                    5: 'evolution majeur'
-                    6: devis
-            114:
-                name: Studelites
-                type:
-                    1: bug
-                    2: 'evolution mineur'
-                    3: support
-                    4: 'arbitrage deprecated'
-                    5: 'evolution majeur'
-                    6: devis
-            94:
-                name: CFO
-                type:
-                    1: bug
-                    2: 'evolution mineur'
-                    3: support
-                    4: 'evolution majeur'
-                    5: Devis
-            55:
-                name: Logement
-                type:
-                    1: bug
-                    2: 'evolution mineur'
-                    3: support
-                    4: contribution-Depreciated
-                    5: 'evolution majeur'
-                    6: devis
-            58:
-                name: Webzine
-                type:
-                    1: bug
-                    2: 'evolution mineur'
-                    3: support
-                    4: 'evolution majeur'
-                    5: devis
-        list_trsb_user:
-            601: 'Stephane Richard'
-            618: 'Fabienne Guriec'
-            705: 'Batiste Herisson'
-            707: 'Matthieu Rambaud'
-            745: 'Jonathan Gondellier'
-        status:
-            corrected:
-                60: 7
-                93: 4
-                123: 4
-                114: 5
-                94: 5
-                55: 10
-                58: 7
-            validated:
-                94: 6
-                60: 6
-                123: 14
-                55: 6
-                114: 6
-                58: 6
-                93: 14
-            refused:
-                94: 7
-                60: 8
-                123: 6
-                55: 7
-                114: 7
-                58: 8
-                93: 6
-            closed:
-                60: 99
-                93: 99
-                123: 99
-                114: 99
-                94: 99
-                55: 99
-                58: 99
+        nbsupano: 415
+        delai_priorite:
+            support:
+                1: 4
+                2: 24
+                3: 72
+            anomalie:
+                1: 4
+                2: 24
+                3: 72
+            evolution:
+                1: 48
+                2: 120
+                3: 240
+    list_project:
+        60:
+            name: HIPARK
+            priority:
+                1: p1
+                2: p2
+                3: p3
+                4: p4
+            type:
+                1: bug
+                2: 'evolution mineur'
+                3: support
+                5: 'evolution majeur'
+                6: devis
+        93:
+            name: iREIM
+            priority:
+                1: p1
+                2: p2
+                3: p3
+                4: p4
+                5: mineur-deprecated
+            type:
+                1: bug
+                3: 'evolution mineur'
+                4: support
+                5: 'evolution majeur'
+                6: devis
+        123:
+            name: REIMIT
+            priority:
+                1: p1
+                2: p2
+                3: p3
+                4: p4
+                5: mineur-deprecated
+            type:
+                1: bug
+                3: 'evolution mineur'
+                4: support
+                5: 'evolution majeur'
+                6: devis
+        114:
+            name: Studelites
+            priority:
+                1: p1
+                2: p2
+                3: p3
+                4: p4
+            type:
+                1: bug
+                2: 'evolution mineur'
+                3: support
+                4: 'arbitrage deprecated'
+                5: 'evolution majeur'
+                6: devis
+        94:
+            name: CFO
+            priority:
+                1: p2
+                2: p3
+                3: p4
+            type:
+                1: bug
+                2: 'evolution mineur'
+                3: support
+                4: 'evolution majeur'
+                5: Devis
+        55:
+            name: Logement
+            priority:
+                1: p2
+                2: p3
+                3: p4
+                4: p1
+            type:
+                1: bug
+                2: 'evolution mineur'
+                3: support
+                4: contribution-Depreciated
+                5: 'evolution majeur'
+                6: devis
+        58:
+            name: Webzine
+            priority:
+                1: p1
+                2: p2
+                3: p3
+            type:
+                1: bug
+                2: 'evolution mineur'
+                3: support
+                4: 'evolution majeur'
+                5: devis
+    list_trsb_user:
+        601: 'Stephane Richard'
+        618: 'Fabienne Guriec'
+        705: 'Batiste Herisson'
+        707: 'Matthieu Rambaud'
+        745: 'Jonathan Gondellier'
+    status:
+        corrected:
+            60: 7
+            93: 4
+            123: 4
+            114: 5
+            94: 5
+            55: 10
+            58: 7
+        validated:
+            94: 6
+            60: 6
+            123: 14
+            55: 6
+            114: 6
+            58: 6
+            93: 14
+        refused:
+            94: 7
+            60: 8
+            123: 6
+            55: 7
+            114: 7
+            58: 8
+            93: 6
+        closed:
+            60: 99
+            93: 99
+            123: 99
+            114: 99
+            94: 99
+            55: 99
+            58: 99
